--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,8 +35,8 @@ jobs:
       - name: Restore packages in preparation for ${{ env.PROJECT_NAME }} publishing
         run: dotnet restore ${{ env.PROJECT_NAME }} -p:ContinuousIntegrationBuild=true --nologo
 
-      - name: Publish ${{ env.PROJECT_NAME }} ${{ matrix.language }}
-        run: dotnet publish ${{ env.PROJECT_NAME }} -o ./publish/ -c Release
+      - name: Publish ${{ env.PROJECT_NAME }}
+        run: dotnet publish ${{ env.PROJECT_NAME }} -o:"./publish/" -c:Release
 
       - name: Collect files
         shell: pwsh
