misc 适配新的IPC Attribute

--- a/ASFEnhance/ASFEnhance.csproj
+++ b/ASFEnhance/ASFEnhance.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
 	</PropertyGroup>
@@ -10,7 +10,6 @@
 	<ItemGroup>
 		<PackageReference Include="AngleSharp.XPath" />
 		<PackageReference Include="SteamKit2" IncludeAssets="compile" />
-		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" />
 		<PackageReference Include="System.Composition.AttributedModel" />
 		<PackageReference Include="System.Linq.Async" IncludeAssets="compile" />
 		<PackageReference Include="ConfigureAwaitChecker.Analyzer">
