--- a/ASFEnhance.IPC/ASFEnhance.IPC.csproj
+++ b/ASFEnhance.IPC/ASFEnhance.IPC.csproj
@@ -5,8 +5,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\ArchiSteamFarm\ArchiSteamFarm\ArchiSteamFarm.csproj" />
-		<ProjectReference Include="..\ASFEnhance\ASFEnhance.csproj" />
+		<ProjectReference Include="..\ArchiSteamFarm\ArchiSteamFarm\ArchiSteamFarm.csproj">
+		  <Private>False</Private>
+		  <ExcludeAssets>all</ExcludeAssets>
+		</ProjectReference>
+		<ProjectReference Include="..\ASFEnhance\ASFEnhance.csproj">
+		  <Private>True</Private>
+		</ProjectReference>
 	</ItemGroup>
 
 	<ItemGroup>
