feat 新增愿望单列表接口 feat 新增 `WISHLIST` 命令 bugfix 修正 `LEAVEGROUP` 命令

--- a/ASFEnhance/ASFEnhance.csproj
+++ b/ASFEnhance/ASFEnhance.csproj
@@ -1,8 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
+		<IpcEnable>false</IpcEnable>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(IpcEnable)' == 'true'">
+		<DefineConstants>$(DefineConstants);IpcEnable</DefineConstants>
+	</PropertyGroup>
+	
 	<ItemGroup>
 		<ProjectReference Include="..\ArchiSteamFarm\ArchiSteamFarm\ArchiSteamFarm.csproj" ExcludeAssets="all" Private="False" />
 	</ItemGroup>
