--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,5 @@
+preserve_hierarchy: true
+
 files:
   - source: /ASFEnhance/Localization/Langs.resx
     translation: /ASFEnhance/Localization/%file_name%.%locale%.%file_extension%
