--- a/.github/workflows/crowdin.yaml
+++ b/.github/workflows/crowdin.yaml
@@ -2,7 +2,8 @@ name: Crowdin Action
 
 on:
   push:
-    branches: [ master ]
+    branches: 
+      - master 
 
 jobs:
   synchronize-with-crowdin:
@@ -16,13 +17,13 @@ jobs:
         uses: crowdin/github-action@v2
         with:
           upload_sources: true
-          upload_translations: false
+          upload_translations: true
           download_translations: true
-          localization_branch_name: l10n_crowdin_translations
+          localization_branch_name: l10n_crowdin
           create_pull_request: true
           pull_request_title: 'New Crowdin Translations'
           pull_request_body: 'New Crowdin translations by [Crowdin GH Action](https://github.com/crowdin/github-action)'
-          pull_request_base_branch_name: 'main'
+          pull_request_base_branch_name: 'master'
         env:
           # A classic GitHub Personal Access Token with the 'repo' scope selected (the user should have write access to the repository).
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
