--- a/.github/workflows/crowdin.yaml
+++ b/.github/workflows/crowdin.yaml
@@ -4,6 +4,9 @@ on:
   push:
     branches: 
       - master 
+    paths:
+      - 'ASFEnhance/Localization/**'
+  workflow_dispatch:
 
 jobs:
   synchronize-with-crowdin:
